--- a/android/build.gradle
+++ b/android/build.gradle
@@ -18,7 +18,7 @@ android {
     }
     defaultConfig {
         applicationId "com.nomad.flappydoge"
-        minSdkVersion 9
+        minSdkVersion 14
         targetSdkVersion 27
         versionCode 1
         versionName "1.0"
@@ -141,4 +141,8 @@ idea {
             }
         }
     }
+}
+dependencies {
+
+    implementation 'com.google.android.gms:play-services-ads:10.2.4'
 }
